--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
     "daisyui": "^2.39.1",
     "graphql": "^16.6.0",
