--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.4",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3"
   },
