--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "daisyui": "^2.39.1",
     "graphql": "^16.6.0",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
