--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,7 @@
             "namedComponents": "arrow-function",
             "unnamedComponents": "arrow-function"
         }],
-        "react/button-has-type": "off"
+        "react/button-has-type": "off",
+        "import/prefer-default-export": "off"
     }
 }
